Completion of code coverage and sonar lint